Changed osgi cmpn version 20090427